# nnc

./: CMakeLists.txt  README.md
Inc/: cmatrix.h  parameter.h  utils.h
Src/: main.c
pytrain/: train.py  utils.py
